// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IplMessage matches snapshot 1`] = `
"<div class="ipl-message__wrapper ipl-message__type-info">
  <font-awesome-icon-stub icon="info-circle" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false" class="icon"></font-awesome-icon-stub>
  <div class="message-content">
    <!--v-if-->
  </div>
</div>"
`;

exports[`IplMessage matches snapshot when closeable 1`] = `
"<div class="ipl-message__wrapper ipl-message__type-info">
  <font-awesome-icon-stub icon="info-circle" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false" class="icon"></font-awesome-icon-stub>
  <div class="message-content">
    <ipl-button-stub icon="times" color="transparent" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="true" class="close-button"></ipl-button-stub>
  </div>
</div>"
`;
